# ClaimSightIndia

./: .env.example  .gitignore  README.md  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: google_oidc.py  legal.py  rate_limit.py  security.py
backend/app/db/: base.py  notification_repository.py  policy_repository.py  repository.py  review_repository.py  session.py  sqlite_dev_bootstrap.py  user_repository.py  vehicle_reference_repository.py
backend/app/graph/: build.py  orchestrator.py  state.py  workflow_state.py
backend/app/observability/: context.py  logging_config.py  timing.py
backend/app/schemas/: __init__.py  claim_api.py  claim_state.py  dashboard_api.py  notification_api.py  policy_api.py  policy_state.py  user_api.py
backend/app/services/: ai_client.py  claim_service.py  user_service.py  vehicle_catalog.py  vehicle_reference.py  wikimedia_vehicle_images.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_claims_table.py  0002_add_users_and_claim_owner.py  0003_add_vehicle_reference_images.py  0004_add_policy_review_notifications.py  0005_add_vehicle_variant.py  0006_add_user_profile_fields.py  0007_add_legal_consent_fields.py
backend/tests/: conftest.py
backend/tests/integration/: test_claims_api.py  test_notifications_api.py  test_policy_api.py  test_reports_api.py  test_users_api.py  test_vehicle_catalog_api.py  test_vehicle_images_api.py
backend/tests/unit/: test_claim_repository.py  test_claim_state.py  test_coverage_analysis.py  test_google_oidc.py  (+11 more)
(+142 files in other folders)
