[project]
name = "claimsight-backend"
version = "0.1.0"
description = "ClaimSight India backend — FastAPI + LangGraph claims triage copilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "anthropic>=0.40",
    "llama-index>=0.12",
    "llama-index-vector-stores-postgres>=0.3",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "pgvector>=0.3",
    "easyocr>=1.7",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "langfuse>=2.53",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "alembic>=1.13",
    "pyjwt[crypto]>=2.9",
    "slowapi>=0.1.9",
    "Pillow>=10",
    "pypdf>=5.0",
    "fpdf2>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
